--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "spotify-clon",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,8 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.15",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/react": "^3.1.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.23",
+    "astro": "^4.5.15",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
   }
 }
