--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,13 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/layouts/*": ["src/layouts/*"],
+      "@/components/*": ["src/components/*"],
+      "@/icons/*": ["src/icons/*"],
+      "@/lib/*": ["src/lib/*"]
+    },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
   }
